example/advanced/hostnames-matchtype/21-gw-empty-route-exact-match-prefix/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hug-gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 31081
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
  - name: https
    protocol: HTTPS
    port: 31444
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: offload
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
